# polyglot-alpha

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSING.md  NOTICE.md  README.md  conftest.py  mypy.ini  polyglot_alpha.db-shm  polyglot_alpha.db-wal  pyproject.toml
.github/: COMMERCIAL_LICENSE_INQUIRY.md
contracts/: .gitignore  LICENSE
corpus/: outcome_distribution.json  resolved_summary.md
deploy/: entrypoint.sh  hf-readme.md  hf-space-README.md  nginx.conf  requirements-mock.txt
examples/: external_operator_example.py
outputs/: B1_test_findings.md  BUG_BACKLOG.md  C1_ui_audit.md  D4_security_audit.md  D5_performance_profile.md  E2_findings.md  E3_test_findings.md  E4_ui_cleanup.md  F-Links_audit.md  F-Links_tooltips.md  G1_picky_user.md  G2_keyboard_viewport.md  G3_chaos.md  HANDOFF.md  J2_i18n_findings.md  J3_cross_browser.md  J4_memory_session.md  L1_postfix_regression.md  L2_stress_findings.md  MASTER_REPORT.md  USER_PRE_DEMO_CHECKLIST.md  WEB3_STORY.md  agent_wallets.json  api_edgecase_report.md  audit_event_34.json  audit_event_35.json  audit_event_36.json  audit_event_37.json  audit_event_38.json  audit_event_39.json  audit_event_40.json  audit_event_41.json  audit_event_42.json  audit_event_43.json  audit_summary.json  autonomous_log_findings.md  autonomous_loop_iter_4.json  autonomous_test_findings.md  backend_monitor_report.md  baseline_comparison.json  (+79 more)
polyglot_alpha/: __init__.py  _fewshots_seed.py  agent_sdk.py  analysts.py  ipfs.py  llm.py  logging_ctx.py  models.py  onchain.py  orchestrator.py  (+6 more)
(+423 files in other folders)
